add some inline text

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script src="static/js/react.16.production.min.js"></script>
   <script src="static/js/react-dom.16.production.min.js"></script>
   <script src="static/js/babel.6.15.min.js"></script>
+  <script src="static/data.js"></script>
   <script type="text/babel" src="static/js/main.js"></script>
 </head>
 <body>
